Nice game play optimization, was able to clean the code, and make it much shorter than original submission

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
 =Advent of Code=
 
-Codes from the http://adventofcode.com/
+Codes written for the programming challenge from the http://adventofcode.com/
 
